kube/prod/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: differentlikeyou-fe
  labels:
    app: web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app: web
